# Asphallea

./: .gitattributes  .gitignore  LICENSE  PLAN.md  README.md  SECURITY.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
asphallea/: __init__.py  audit.py  engine.py  errors.py  guard.py  integrity.py  intercept.py  policy.py  sandbox.py
asphallea/integrations/: __init__.py  langchain.py  mcp.py
core/: Cargo.toml  README.md
core/src/: landlock_fs.rs  macos_sandbox.rs  main.rs  netns.rs  policy.rs  report.rs  rlimits.rs  seccomp.rs  win_appcontainer.rs  win_contain.rs
docs/: why-agent-security-is-an-os-problem.md
examples/: demo.py  injection_demo.py  quickstart.py
policies/: example.yaml
scripts/: bundle_core.py
tests/: test_audit.py  test_demo.py  test_engine.py  test_guard.py  test_integrity.py  test_intercept.py  test_langchain.py  test_mcp.py  test_packaging.py  test_policy.py  test_sandbox.py
